--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(day1 day1/day1.cpp)
 add_executable(day1p2 day1/day1p2.cpp)
 set_property(TARGET day1p2 PROPERTY CXX_STANDARD 20)
 
+add_executable(day2 day2/day2.cpp)
