--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(day1p2 day1/day1p2.cpp)
 set_property(TARGET day1p2 PROPERTY CXX_STANDARD 20)
 
 add_executable(day2 day2/day2.cpp)
+
+add_executable(day3 day3/day3.cpp)
