--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -10,3 +10,6 @@ set_property(TARGET day1p2 PROPERTY CXX_STANDARD 20)
 add_executable(day2 day2/day2.cpp)
 
 add_executable(day3 day3/day3.cpp)
+
+add_executable(day4 day4/day4.cpp)
+set_property(TARGET day4 PROPERTY CXX_STANDARD 20)
