--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(day3 day3/day3.cpp)
 
 add_executable(day4 day4/day4.cpp)
 set_property(TARGET day4 PROPERTY CXX_STANDARD 20)
+
+add_executable(day5 day5/day5.cpp)
