--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(day4 day4/day4.cpp)
 set_property(TARGET day4 PROPERTY CXX_STANDARD 20)
 
 add_executable(day5 day5/day5.cpp)
+target_compile_options(day5 PUBLIC -O3)
