--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -16,3 +16,5 @@ set_property(TARGET day4 PROPERTY CXX_STANDARD 20)
 
 add_executable(day5 day5/day5.cpp)
 target_compile_options(day5 PUBLIC -O3)
+
+add_executable(day6 day6/day6.cpp)
