--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -20,3 +20,5 @@ target_compile_options(day5 PUBLIC -O3)
 add_executable(day6 day6/day6.cpp)
 
 add_executable(day7 day7/day7.cpp)
+
+add_executable(day8 day8/day8.cpp)
