--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -22,3 +22,5 @@ add_executable(day6 day6/day6.cpp)
 add_executable(day7 day7/day7.cpp)
 
 add_executable(day8 day8/day8.cpp)
+set_property(TARGET day8 PROPERTY CXX_STANDARD 20)
+#target_compile_options(day8 PUBLIC -O3)
