--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -23,4 +23,5 @@ add_executable(day7 day7/day7.cpp)
 
 add_executable(day8 day8/day8.cpp)
 set_property(TARGET day8 PROPERTY CXX_STANDARD 20)
-#target_compile_options(day8 PUBLIC -O3)
+
+add_executable(day9 day9/day9.cpp)
