--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -27,3 +27,5 @@ set_property(TARGET day8 PROPERTY CXX_STANDARD 20)
 add_executable(day9 day9/day9.cpp)
 
 add_executable(day10 day10/day10.cpp)
+
+add_executable(day11 day11/day11.cpp)
