--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -29,3 +29,5 @@ add_executable(day9 day9/day9.cpp)
 add_executable(day10 day10/day10.cpp)
 
 add_executable(day11 day11/day11.cpp)
+
+add_executable(day12 day12/day12.cpp)
