--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -31,3 +31,4 @@ add_executable(day10 day10/day10.cpp)
 add_executable(day11 day11/day11.cpp)
 
 add_executable(day12 day12/day12.cpp)
+target_compile_options(day12 PUBLIC -O3)
