--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -36,3 +36,5 @@ target_compile_options(day12 PUBLIC -O3)
 add_executable(day13 day13/day13.cpp)
 
 add_executable(day14 day14/day14.cpp)
+
+add_executable(day15 day15/day15.cpp)
